# stm32f7xx_hal_template

./: CMakeLists.txt  _gdbinit  readme.md  stm32f7.cmake
OOCD/: oocd_jlink.cfg  oocd_stlink_v2.cfg
drivers/: CMakeLists.txt  hal_defines.cmake  hal_stm32f7xx.cmake  ll_stm32f7xx.cmake
drivers/CMSIS/Device/ST/STM32F7xx/Include/: stm32f7xx.h
drivers/STM32F7xx_HAL_Driver/Inc/: stm32f7xx_hal.h  stm32f7xx_hal_conf.h
src/: main.c
src/clockerf7/: clock.c  clock.h
startup/: system_stm32f7xx.c
